# Advanced-RAG-HybridSearch-QueryDecomposition-AzureDoc-Chainlit

./: .gitignore  0_qa.py  1_qa_pdf.py  2_qa_azure_pdf.py  3_qa_Hybrid_search.py  4.1_qa_qery_decomp_hybrid.py  4.2_qa_qery_decomp_hybrid.py  4.3_simple_qna.py  4.5_qn.py  4.6_qna.py  4_qa_qery_decomp_hybrid.py  5.1_chailit_app.py  5.2_chailit_app.py  5.3_chailit_app_working.py  5.4_chainlit_app copy.py  5.5_chainlit_app_working.py  Azure_Open_AI Setup.ipynb  Quadrant_vectordb_steup.ipynb  README.md  chainlit_demo.ipynb  pyproject.toml  record_manager_cache.sql  test_chat_setting.py
.files/4abc81d6-6fb5-4cee-8eea-66370ca87f27/: 17a6392a-fe1d-411b-834e-3674b6b3d10d.txt  20299133-4b12-4f72-937f-35e701a445ab.txt  4b7e7017-fa39-48e9-b859-fcbbf02c300d.txt  4cb03757-623d-4c98-a602-0ec81ee058f2.txt  527af86e-4589-4e45-8656-a67626e409f9.txt  5ee48433-e4b6-468f-8979-2c2d9f5488b4.txt  6420604e-c389-458d-94ba-590fcdd23172.txt  771eba5e-6a0d-4f1b-b52f-300edea85fa7.txt  886a1778-4bb2-4229-b6a8-2276044225ab.txt  a979500b-977e-41f1-b70e-86fcf35fd2a7.txt  b2c8d20d-9009-4558-85e8-c749c17d222a.txt  b2eaf2ae-364f-456e-b40f-c1c841a6865b.txt  c2785ddf-cbc3-4e8d-9768-a07fa0883b30.txt  c6d39cb1-4c12-48de-a820-d03bf952092e.txt  cd189a66-6c62-483e-931d-560d9c946460.txt  e4ba330d-ba38-417f-aefa-7f3a7747d8cb.txt  ee477ff6-1bd1-4d7c-a60e-00076cff8032.txt  f3239afb-970a-44dc-a5e9-42d4c5cb736e.txt  f5408d01-b69d-41f6-aa81-81caa843cbea.txt
data/: Ai_text.txt
