[tool.poetry]
name = "chainlit-demo2"
version = "0.1.0"
description = "advance rag using Chainlit"
authors = ["Sarthak Kaushik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.2.0"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
langchain-openai = "^0.2.2"
pypdf = "^5.0.1"
chromadb = "^0.5.13"
azure-ai-documentintelligence = "^1.0.0b4"
rank-bm25 = "^0.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
